Deprecated `Integer(int)`